# $Id$
2008-08-31 Robin Jones
	* Created ability to have a themes setting file to define commonly asked for features.
	* Created a new "Network Theme Pack" to show off the settings file and improve the user experience.

2008-08-31 Robin Jones
	* Updated some table row elements to support Odd/Even CSS. This also closes #382

2008-08-28 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix #492

2008-08-13 Robin Jones
	* Fixed dependency change for Smarty reported by cristian@lalineapeluda.com

2008-08-07 Benoit Grégoire  <bock@step.polymtl.ca>
	* Updated Spanish translation by jlms77@gmail.com

2008-07-13 Benoit Grégoire  <bock@step.polymtl.ca>
	* Add new Catalan translation by Christian Lorenzo cristian@lalineapeluda.com
	* Rebuild transaltions and initial schema.

2008-06-12 Benoit Grégoire  <bock@step.polymtl.ca>
	* Add NODE_PERM_BYPASS_DYNAMIC_ABUSE_CONTROL permission.  User is allowed to exceed dynamic abuse control limits at this node.
	* Stakeholder selector UI tweaks

2008-06-12 Benoit Grégoire  <bock@step.polymtl.ca>
	* Use bigint for dynamic abuse control byte values
	* UIAllowedBandwidth:  Format values in a human-readable way

2008-06-10 Benoit Grégoire  <bock@step.polymtl.ca>
	* Authenticator.php:  Fix SQL error closing connections.
	* auth/index.php:  Probably fix the "Access denied" message when user click twice problem that resurfaced.
	* At long last, implement operational Dynamic abuse control (out of the embryo of the token architecture)!  Configurable in Network preferences if you have the permissions.  Unlike static limits, this is a sliding window (typically a month) during which user have a bandwidth and connection duration limit, per node, and totalled throughout the network.
	* UIAllowedBandwidth:  New, simplistic content type to show the user how much of his allocation he consumed.  Off course, the goal is actually to make it into a pretty graph....

2008-06-10 Benoit Grégoire  <bock@step.polymtl.ca>